# Wordle

./: .coveragerc  .gitignore  README.md
game/: config.py  game.py  main.py  wordle.py
game/tests/unitTests/: test_config.py  test_game.py  test_wordle.py
solver/: Cargo.toml
solver/src/: game_logic.rs  main.rs  start.rs  words.rs
ui/: HELPME.md
