[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"
authors = ["Barak Taya, barakadax@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"]}
